[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu/Options.gd" type="Script" id=1]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="lbl_Name" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.1
text = "Menu "
align = 1
valign = 1

[node name="btn_Video" type="Button" parent="."]
margin_left = 50.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 120.0
text = "Video"

[node name="btn_Audio" type="Button" parent="."]
margin_left = 220.0
margin_top = 100.0
margin_right = 370.0
margin_bottom = 120.0
text = "Audio"

[node name="btn_Controls" type="Button" parent="."]
margin_left = 390.0
margin_top = 100.0
margin_right = 540.0
margin_bottom = 120.0
text = "Controls"

[node name="btn_Back" type="Button" parent="."]
margin_left = 750.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 120.0
text = "Back"
